--- a/Moon_eqc_Apollo15_PanCam_Shade_28N307E_3mp/config.json
+++ b/Moon_eqc_Apollo15_PanCam_Shade_28N307E_3mp/config.json
@@ -1,12 +1,22 @@
 {
-  "ProjectionType": "EQ",
-  "Title": "阿里斯塔克斯高原2 DEM山体阴影图(Aristarchus Plateau 2, Hillshade)",
-  "LayerID": "Moon_eq_Apollo15_PanCam_Shade_28N307E_3mp",
-  "Icon": "{MoonImage}\\Moon_eqc_Apollo15_PanCam_Shade_28N307E_3mp\\Apollo15_PanCam_Shade_28N307E_3mp-120.png",
-  "BBOX": [-53.1015073, 26.7635801, -51.5924499, 29.0334672],
-  "Abstract": "这是阿里斯塔克斯高原区域 2 的数字高程模型 （DEM） 的晕渲地貌。原始阿波罗15号全景图像的分辨率为1.5米/像素，使用软拷贝摄影测量系统允许输出5米/像素的DEM分辨率。它已注册到ULCN 2005控制网络。DEM水平和垂直注册到LRO的月球轨道器激光高度计（LOLA）数据。高程值以米为单位，半径为 1737400m。",
-  "Projection": "urn:ogc:def:crs:EPSG::104903",
-  "Preview": "{MoonImage}\\Moon_eqc_Apollo15_PanCam_Shade_28N307E_3mp\\index.html",
-  "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_Apollo15_PanCam_Shade_28N307E_3mp\\WMTSCapabilities.xml",
-  "MetaData": "{MoonImage}\\Moon_eqc_Apollo15_PanCam_Shade_28N307E_3mp\\metadata.html"
+    "ProjectionType": "EQ",
+    "Title": "阿里斯塔克斯高原2 DEM山体阴影图(Aristarchus Plateau 2, Hillshade)",
+    "LayerID": "Moon_eq_Apollo15_PanCam_Shade_28N307E_3mp",
+    "Icon": "{MoonImage}\\Moon_eqc_Apollo15_PanCam_Shade_28N307E_3mp\\Apollo15_PanCam_Shade_28N307E_3mp-120.png",
+    "BBOX": [
+        -53.1015073,
+        26.7635801,
+        -51.5924499,
+        29.0334672
+    ],
+    "Abstract": "这是阿里斯塔克斯高原区域 2 的数字高程模型 （DEM） 的晕渲地貌。原始阿波罗15号全景图像的分辨率为1.5米/像素，使用软拷贝摄影测量系统允许输出5米/像素的DEM分辨率。它已注册到ULCN 2005控制网络。DEM水平和垂直注册到LRO的月球轨道器激光高度计（LOLA）数据。高程值以米为单位，半径为 1737400m。",
+    "Projection": "urn:ogc:def:crs:EPSG::104903",
+    "Preview": "{MoonImage}\\Moon_eqc_Apollo15_PanCam_Shade_28N307E_3mp\\index.html",
+    "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_Apollo15_PanCam_Shade_28N307E_3mp\\WMTSCapabilities.xml",
+    "MetaData": "{MoonImage}\\Moon_eqc_Apollo15_PanCam_Shade_28N307E_3mp\\metadata.html",
+    "WMTS_TypeId": "1000000065",
+    "MinimumLevel": 0,
+    "MaximumLevel": 12,
+    "NumberOfLevelZeroTilesX": 2,
+    "NumberOfLevelZeroTilesY": 1
 }
