--- a/Moon_eqc_20191118-demmos-eqc-colorhillshade/config.json
+++ b/Moon_eqc_20191118-demmos-eqc-colorhillshade/config.json
@@ -13,5 +13,10 @@
     "Projection": "PROJCS['unnamed',\n\tGEOGCS['unknown',\n\t\tDATUM['unknown',SPHEROID['unnamed',1737400,0]],\n\t\tPRIMEM['Greenwich',0],UNIT['degree',0.0174532925199433]],\n\tPROJECTION['Equirectangular'],\n\tPARAMETER['latitude_of_origin',45],\n\tPARAMETER['central_meridian',25],\n\tPARAMETER['standard_parallel_1',8],\n\tPARAMETER['false_easting',0],\n\tPARAMETER['false_northing',0],UNIT['metre',1,AUTHORITY['EPSG','9001']]]\n",
     "Preview": "{MoonImage}\\Moon_eqc_20191118-demmos-eqc-colorhillshade\\index.html",
     "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_20191118-demmos-eqc-colorhillshade\\WMTSCapabilities.xml",
-    "MetaData": "{MoonImage}\\Moon_eqc_20191118-demmos-eqc-colorhillshade\\MetaData.html"
+    "MetaData": "{MoonImage}\\Moon_eqc_20191118-demmos-eqc-colorhillshade\\MetaData.html",
+    "WMTS_TypeId": "1000000106",
+    "MinimumLevel": 0,
+    "MaximumLevel": 13,
+    "NumberOfLevelZeroTilesX": 2,
+    "NumberOfLevelZeroTilesY": 1
 }
