--- a/Moon_eqc_20191118-imagemos_smoothtrans_32bit_latlon_lzw/config.json
+++ b/Moon_eqc_20191118-imagemos_smoothtrans_32bit_latlon_lzw/config.json
@@ -13,5 +13,10 @@
     "Projection": "GEOGCS['Geographic Coordinate System',\n\tDATUM['D_MOON',SPHEROID['MOON',1737400,0]],\n\tPRIMEM['Reference Meridian',0],UNIT['degree',0.0174532925199433]]\n",
     "Preview": "{MoonImage}\\Moon_eqc_20191118-imagemos_smoothtrans_32bit_latlon_lzw\\index.html",
     "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_20191118-imagemos_smoothtrans_32bit_latlon_lzw\\WMTSCapabilities.xml",
-    "MetaData": "{MoonImage}\\Moon_eqc_20191118-imagemos_smoothtrans_32bit_latlon_lzw\\MetaData.html"
+    "MetaData": "{MoonImage}\\Moon_eqc_20191118-imagemos_smoothtrans_32bit_latlon_lzw\\MetaData.html",
+    "WMTS_TypeId": "1000000107",
+    "MinimumLevel": 0,
+    "MaximumLevel": 14,
+    "NumberOfLevelZeroTilesX": 2,
+    "NumberOfLevelZeroTilesY": 1
 }
