--- a/Moon_eqc_A11_60x60km.eq/config.json
+++ b/Moon_eqc_A11_60x60km.eq/config.json
@@ -13,5 +13,10 @@
     "Projection": "urn:ogc:def:crs:EPSG::104903",
     "Preview": "{MoonImage}\\Moon_eqc_A11_60x60km.eq\\index.html",
     "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_A11_60x60km.eq\\WMTSCapabilities.xml",
-    "MetaData": "{MoonImage}\\Moon_eqc_A11_60x60km.eq\\metadata.html"
+    "MetaData": "{MoonImage}\\Moon_eqc_A11_60x60km.eq\\metadata.html",
+    "WMTS_TypeId": "1000000007",
+    "MinimumLevel": 0,
+    "MaximumLevel": 15,
+    "NumberOfLevelZeroTilesX": 2,
+    "NumberOfLevelZeroTilesY": 1
 }
