--- a/Moon_eqc_A14_60x60km.0_3.eq/config.json
+++ b/Moon_eqc_A14_60x60km.0_3.eq/config.json
@@ -1,12 +1,22 @@
 {
-  "ProjectionType": "EQ",
-  "Title": "Apollo 14 着陆区高分影像(LRO Narrow Angle Camera, Mosaic Apollo 14)",
-  "LayerID": "Moon_eqc_A14_60x60km.0_3.eq",
-  "Icon": "{MoonImage}\\Moon_eqc_A14_60x60km.0_3.eq\\A14_60x60km.0_3.eq-120.png",
-  "BBOX": [-18.4593366, -4.6393366, -16.4806634, -2.6606634],
-  "Abstract": "这是一个月球勘测轨道飞行器（LRO）窄角相机（NAC）马赛克，以阿波罗14号着陆点为中心，范围为60x60km。每个NAC图像在ISIS3中以50cm像素的分辨率进行处理，颜色平衡，并合成为单个输出。阿波罗14号于1971年2月15日登月。",
-  "Projection": "urn:ogc:def:crs:EPSG::104903\n",
-  "Preview": "{MoonImage}\\Moon_eqc_A14_60x60km.0_3.eq\\index.html",
-  "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_A14_60x60km.0_3.eq\\WMTSCapabilities.xml",
-  "MetaData": "{MoonImage}\\Moon_eqc_A14_60x60km.0_3.eq\\MetaData.html"
+    "ProjectionType": "EQ",
+    "Title": "Apollo 14 着陆区高分影像(LRO Narrow Angle Camera, Mosaic Apollo 14)",
+    "LayerID": "Moon_eqc_A14_60x60km.0_3.eq",
+    "Icon": "{MoonImage}\\Moon_eqc_A14_60x60km.0_3.eq\\A14_60x60km.0_3.eq-120.png",
+    "BBOX": [
+        -18.4593366,
+        -4.6393366,
+        -16.4806634,
+        -2.6606634
+    ],
+    "Abstract": "这是一个月球勘测轨道飞行器（LRO）窄角相机（NAC）马赛克，以阿波罗14号着陆点为中心，范围为60x60km。每个NAC图像在ISIS3中以50cm像素的分辨率进行处理，颜色平衡，并合成为单个输出。阿波罗14号于1971年2月15日登月。",
+    "Projection": "urn:ogc:def:crs:EPSG::104903\n",
+    "Preview": "{MoonImage}\\Moon_eqc_A14_60x60km.0_3.eq\\index.html",
+    "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_A14_60x60km.0_3.eq\\WMTSCapabilities.xml",
+    "MetaData": "{MoonImage}\\Moon_eqc_A14_60x60km.0_3.eq\\MetaData.html",
+    "WMTS_TypeId": "1000000111",
+    "MinimumLevel": 0,
+    "MaximumLevel": 15,
+    "NumberOfLevelZeroTilesX": 2,
+    "NumberOfLevelZeroTilesY": 1
 }
