--- a/Moon_eqc_Apollo15_PanCam_ClrConf_28N307E_3mp/config.json
+++ b/Moon_eqc_Apollo15_PanCam_ClrConf_28N307E_3mp/config.json
@@ -13,5 +13,10 @@
     "Projection": "urn:ogc:def:crs:EPSG::104903\n",
     "Preview": "{MoonImage}\\Moon_eqc_Apollo15_PanCam_ClrConf_28N307E_3mp\\index.html",
     "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_Apollo15_PanCam_ClrConf_28N307E_3mp\\WMTSCapabilities.xml",
-    "MetaData": "{MoonImage}\\Moon_eqc_Apollo15_PanCam_ClrConf_28N307E_3mp\\MetaData.html"
+    "MetaData": "{MoonImage}\\Moon_eqc_Apollo15_PanCam_ClrConf_28N307E_3mp\\MetaData.html",
+    "WMTS_TypeId": "1000000205",
+    "MinimumLevel": 0,
+    "MaximumLevel": 12,
+    "NumberOfLevelZeroTilesX": 2,
+    "NumberOfLevelZeroTilesY": 1
 }
