--- a/Moon_eqc_Apollo16_MetricCam_ClrShade_Global_1024ppd/config.json
+++ b/Moon_eqc_Apollo16_MetricCam_ClrShade_Global_1024ppd/config.json
@@ -1,12 +1,22 @@
 {
-  "ProjectionType": "EQ",
-  "Title": "Apollo 16 DEM 彩色山体阴影图(ColorHillshade)",
-  "LayerID": "Moon_eqc_Apollo16_MetricCam_ClrShade_Global_1024ppd",
-  "Icon": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_ClrShade_Global_1024ppd\\Apollo16_MetricCam_ClrShade_Global_1024ppd-120.png",
-  "BBOX": [-179.9995117, -13.9995117, 179.9995117, 18.0004883],
-  "Abstract": "Apollo 16 DEM颜色阴影是使用Vision Workbench中DEM文件的colormap和hillshade函数生成的。颜色图（legend.png）的最小值和最大值对应于相对于平均月球半径1737.4km的[-849910208]米范围。DEM颜色阴影值存储为14.8m/像素分辨率的8位带符号整数。这些DEM颜色阴影文件是使用Vision Workbench库生成的：这是一个由NASA Ames智能机器人集团（IRG）生产的用于立体图像自动处理的软件工具。",
-  "Projection": "GEOGCS['Geographic Coordinate System',\n  DATUM['D_MOON',SPHEROID['MOON',1737400,'inf']],\n  PRIMEM['Reference Meridian',0],UNIT['degree',0.0174532925199433]]",
-  "Preview": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_ClrShade_Global_1024ppd\\index.html",
-  "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_ClrShade_Global_1024ppd\\WMTSCapabilities.xml",
-  "MetaData": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_ClrShade_Global_1024ppd\\MetaData.html"
+    "ProjectionType": "EQ",
+    "Title": "Apollo 16 DEM 彩色山体阴影图(ColorHillshade)",
+    "LayerID": "Moon_eqc_Apollo16_MetricCam_ClrShade_Global_1024ppd",
+    "Icon": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_ClrShade_Global_1024ppd\\Apollo16_MetricCam_ClrShade_Global_1024ppd-120.png",
+    "BBOX": [
+        -179.9995117,
+        -13.9995117,
+        179.9995117,
+        18.0004883
+    ],
+    "Abstract": "Apollo 16 DEM颜色阴影是使用Vision Workbench中DEM文件的colormap和hillshade函数生成的。颜色图（legend.png）的最小值和最大值对应于相对于平均月球半径1737.4km的[-849910208]米范围。DEM颜色阴影值存储为14.8m/像素分辨率的8位带符号整数。这些DEM颜色阴影文件是使用Vision Workbench库生成的：这是一个由NASA Ames智能机器人集团（IRG）生产的用于立体图像自动处理的软件工具。",
+    "Projection": "GEOGCS['Geographic Coordinate System',\n  DATUM['D_MOON',SPHEROID['MOON',1737400,'inf']],\n  PRIMEM['Reference Meridian',0],UNIT['degree',0.0174532925199433]]",
+    "Preview": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_ClrShade_Global_1024ppd\\index.html",
+    "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_ClrShade_Global_1024ppd\\WMTSCapabilities.xml",
+    "MetaData": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_ClrShade_Global_1024ppd\\MetaData.html",
+    "WMTS_TypeId": "1000000075",
+    "MinimumLevel": 0,
+    "MaximumLevel": 8,
+    "NumberOfLevelZeroTilesX": 2,
+    "NumberOfLevelZeroTilesY": 1
 }
