--- a/Moon_eqc_Apollo16_MetricCam_Mosaic_Global_4096ppd/config.json
+++ b/Moon_eqc_Apollo16_MetricCam_Mosaic_Global_4096ppd/config.json
@@ -1,12 +1,22 @@
 {
-  "ProjectionType": "EQ",
-  "Title": "Apollo 16 影像",
-  "LayerID": "Moon_eqc_Apollo16_MetricCam_Mosaic_Global_4096ppd",
-  "Icon": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_Mosaic_Global_4096ppd\\Apollo16_MetricCam_Mosaic_Global_4096ppd-120.png",
-  "BBOX": [-48.0001221, -13.9998779, 179.9998779, 14.0001221],
-  "Abstract": "阿波罗16号数字图像马赛克以7.4m/像素（4096ppd）分辨率存储为8位带符号整数。无效像素标记为0值。值255未使用。镶嵌过程包括上采样后处理步骤。马赛克是使用艾姆斯立体管道生成的：这是一种由美国国家航空航天局艾姆斯智能机器人集团（IRG）生产的用于立体图像自动处理的软件工具。",
-  "Projection": "GEOGCS['Geographic Coordinate System',\n  DATUM['D_MOON',SPHEROID['MOON',1737400,'inf']],\n  PRIMEM['Reference Meridian',0],UNIT['degree',0.0174532925199433]]",
-  "Preview": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_Mosaic_Global_4096ppd\\index.html",
-  "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_Mosaic_Global_4096ppd\\WMTSCapabilities.xml",
-  "MetaData": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_Mosaic_Global_4096ppd\\MetaData.html"
+    "ProjectionType": "EQ",
+    "Title": "Apollo 16 影像",
+    "LayerID": "Moon_eqc_Apollo16_MetricCam_Mosaic_Global_4096ppd",
+    "Icon": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_Mosaic_Global_4096ppd\\Apollo16_MetricCam_Mosaic_Global_4096ppd-120.png",
+    "BBOX": [
+        -48.0001221,
+        -13.9998779,
+        179.9998779,
+        14.0001221
+    ],
+    "Abstract": "阿波罗16号数字图像马赛克以7.4m/像素（4096ppd）分辨率存储为8位带符号整数。无效像素标记为0值。值255未使用。镶嵌过程包括上采样后处理步骤。马赛克是使用艾姆斯立体管道生成的：这是一种由美国国家航空航天局艾姆斯智能机器人集团（IRG）生产的用于立体图像自动处理的软件工具。",
+    "Projection": "GEOGCS['Geographic Coordinate System',\n  DATUM['D_MOON',SPHEROID['MOON',1737400,'inf']],\n  PRIMEM['Reference Meridian',0],UNIT['degree',0.0174532925199433]]",
+    "Preview": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_Mosaic_Global_4096ppd\\index.html",
+    "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_Mosaic_Global_4096ppd\\WMTSCapabilities.xml",
+    "MetaData": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_Mosaic_Global_4096ppd\\MetaData.html",
+    "WMTS_TypeId": "1000000077",
+    "MinimumLevel": 0,
+    "MaximumLevel": 10,
+    "NumberOfLevelZeroTilesX": 2,
+    "NumberOfLevelZeroTilesY": 1
 }
