--- a/Moon_eqc_Apollo16_MetricCam_Shade_Global_1024ppd/config.json
+++ b/Moon_eqc_Apollo16_MetricCam_Shade_Global_1024ppd/config.json
@@ -1,12 +1,22 @@
 {
-  "ProjectionType": "EQ",
-  "Title": "Apollo 16 DEM 山体阴影图, Hillshade",
-  "LayerID": "Moon_eqc_Apollo16_MetricCam_Shade_Global_1024ppd",
-  "Icon": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_Shade_Global_1024ppd\\Apollo16_MetricCam_Shade_Global_1024ppd-120.png",
-  "BBOX": [-179.9995117, -13.9995117, 179.9995117, 18.0004883],
-  "Abstract": "The Apollo 16 DEM shade is generated using the hillshade function in Vision Workbench package. The DEM shade values are stored as 8-bit signed integer at 14.8m/pixel resolution. These DEM shade files were generated using the Vision Workbench library: a software tool produced by the NASA Ames Intelligent Robotics Group (IRG) for automated processing of stereo imagery.",
-  "Projection": "urn:ogc:def:crs:EPSG::104903",
-  "Preview": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_Shade_Global_1024ppd\\index.html",
-  "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_Shade_Global_1024ppd\\WMTSCapabilities.xml",
-  "MetaData": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_Shade_Global_1024ppd\\MetaData.html"
+    "ProjectionType": "EQ",
+    "Title": "Apollo 16 DEM 山体阴影图, Hillshade",
+    "LayerID": "Moon_eqc_Apollo16_MetricCam_Shade_Global_1024ppd",
+    "Icon": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_Shade_Global_1024ppd\\Apollo16_MetricCam_Shade_Global_1024ppd-120.png",
+    "BBOX": [
+        -179.9995117,
+        -13.9995117,
+        179.9995117,
+        18.0004883
+    ],
+    "Abstract": "The Apollo 16 DEM shade is generated using the hillshade function in Vision Workbench package. The DEM shade values are stored as 8-bit signed integer at 14.8m/pixel resolution. These DEM shade files were generated using the Vision Workbench library: a software tool produced by the NASA Ames Intelligent Robotics Group (IRG) for automated processing of stereo imagery.",
+    "Projection": "urn:ogc:def:crs:EPSG::104903",
+    "Preview": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_Shade_Global_1024ppd\\index.html",
+    "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_Shade_Global_1024ppd\\WMTSCapabilities.xml",
+    "MetaData": "{MoonImage}\\Moon_eqc_Apollo16_MetricCam_Shade_Global_1024ppd\\MetaData.html",
+    "WMTS_TypeId": "1000000076",
+    "MinimumLevel": 0,
+    "MaximumLevel": 8,
+    "NumberOfLevelZeroTilesX": 2,
+    "NumberOfLevelZeroTilesY": 1
 }
