--- a/Moon_eqc_ApolloZone_MetricCam_Conf_Global_1024ppd/config.json
+++ b/Moon_eqc_ApolloZone_MetricCam_Conf_Global_1024ppd/config.json
@@ -13,5 +13,10 @@
     "Projection": "TBD\n",
     "Preview": "{MoonImage}\\Moon_eqc_ApolloZone_MetricCam_Conf_Global_1024ppd\\index.html",
     "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_ApolloZone_MetricCam_Conf_Global_1024ppd\\WMTSCapabilities.xml",
-    "MetaData": "{MoonImage}\\Moon_eqc_ApolloZone_MetricCam_Conf_Global_1024ppd\\MetaData.html"
+    "MetaData": "{MoonImage}\\Moon_eqc_ApolloZone_MetricCam_Conf_Global_1024ppd\\MetaData.html",
+    "WMTS_TypeId": "1000000220",
+    "MinimumLevel": 0,
+    "MaximumLevel": 5,
+    "NumberOfLevelZeroTilesX": 2,
+    "NumberOfLevelZeroTilesY": 1
 }
