--- a/Moon_eqc_ApolloZone_MetricCam_Mosaic_Global_3033ppd/config.json
+++ b/Moon_eqc_ApolloZone_MetricCam_Mosaic_Global_3033ppd/config.json
@@ -13,5 +13,10 @@
     "Projection": "urn:ogc:def:crs:EPSG::104903\n",
     "Preview": "{MoonImage}\\Moon_eqc_ApolloZone_MetricCam_Mosaic_Global_3033ppd\\index.html",
     "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_ApolloZone_MetricCam_Mosaic_Global_3033ppd\\WMTSCapabilities.xml",
-    "MetaData": "{MoonImage}\\Moon_eqc_ApolloZone_MetricCam_Mosaic_Global_3033ppd\\MetaData.html"
+    "MetaData": "{MoonImage}\\Moon_eqc_ApolloZone_MetricCam_Mosaic_Global_3033ppd\\MetaData.html",
+    "WMTS_TypeId": "1000000221",
+    "MinimumLevel": 0,
+    "MaximumLevel": 10,
+    "NumberOfLevelZeroTilesX": 2,
+    "NumberOfLevelZeroTilesY": 1
 }
