--- a/Moon_eqc_Clem_UVVIS_OpticalMaturity_Gray_Global_152ppd/config.json
+++ b/Moon_eqc_Clem_UVVIS_OpticalMaturity_Gray_Global_152ppd/config.json
@@ -13,5 +13,10 @@
     "Projection": "GEOGCS['GCS_Moon_2000',\n\tDATUM['unknown',SPHEROID['unnamed',1737400,0]],\n\tPRIMEM['Greenwich',0],UNIT['degree',0.0174532925199433]]\n",
     "Preview": "{MoonImage}\\Moon_eqc_Clem_UVVIS_OpticalMaturity_Gray_Global_152ppd\\index.html",
     "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_Clem_UVVIS_OpticalMaturity_Gray_Global_152ppd\\WMTSCapabilities.xml",
-    "MetaData": "{MoonImage}\\Moon_eqc_Clem_UVVIS_OpticalMaturity_Gray_Global_152ppd\\MetaData.html"
+    "MetaData": "{MoonImage}\\Moon_eqc_Clem_UVVIS_OpticalMaturity_Gray_Global_152ppd\\MetaData.html",
+    "WMTS_TypeId": "1000000082",
+    "MinimumLevel": 0,
+    "MaximumLevel": 6,
+    "NumberOfLevelZeroTilesX": 2,
+    "NumberOfLevelZeroTilesY": 1
 }
