--- a/Moon_eqc_Clem_UVVIS_TiO2_Clr_Global_152ppd/config.json
+++ b/Moon_eqc_Clem_UVVIS_TiO2_Clr_Global_152ppd/config.json
@@ -13,5 +13,10 @@
     "Projection": "urn:ogc:def:crs:EPSG::104903\n",
     "Preview": "{MoonImage}\\Moon_eqc_Clem_UVVIS_TiO2_Clr_Global_152ppd\\index.html",
     "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_Clem_UVVIS_TiO2_Clr_Global_152ppd\\WMTSCapabilities.xml",
-    "MetaData": "{MoonImage}\\Moon_eqc_Clem_UVVIS_TiO2_Clr_Global_152ppd\\MetaData.html"
+    "MetaData": "{MoonImage}\\Moon_eqc_Clem_UVVIS_TiO2_Clr_Global_152ppd\\MetaData.html",
+    "WMTS_TypeId": "1000000083",
+    "MinimumLevel": 0,
+    "MaximumLevel": 6,
+    "NumberOfLevelZeroTilesX": 2,
+    "NumberOfLevelZeroTilesY": 1
 }
